Fixed height and aspect-ratio for icon on mobile & tablet

--- a/lp/css/styles.css
+++ b/lp/css/styles.css
@@ -2311,14 +2311,12 @@ html {
 @media (max-width: 991px) {
   .clock-icon {
     width: 80px;
-    height: 80px;
   }
 }
 
 @media (max-width: 640px) {
   .clock-icon {
     width: 60px;
-    height: 60px;
   }
 }
 
